# src/routes/initRouter.ts
@@ -16,13 +16,15 @@ router.get('/swagger.yaml', (req, res) => {
 
 router.get('/privacy-policy', (req, res) => {
     res.json({
-        policy: "Our privacy policy is simple: we do not share your information with third parties without your consent. However, please note that this application uses OpenAI's services, such as ChatGPT, which may collect and use some data. For more details, refer to OpenAI's privacy policy at https://openai.com/privacy/"
+        policy: "Our privacy pol" +
+            "icy is simple: we do not share your information with third parties without your consent. However, please note that this application uses OpenAI's services, such as ChatGPT, which may collect and use some data. For more details, refer to OpenAI's privacy policy at https://openai.com/privacy/"
     });
 });
 
 router.use("/population", populationRoutes);
 router.use("/income", incomeRoute);
 router.use("/demographics", demographicRoute);
+router.use("/population", populationRoutes);
 router.use("/mietpreise", mietpreisRoute);
 router.use("/apartments", apartmentRoute);
 router.use("/employment", employmentRoute);
